--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "node backend/server.js",
-    "serve": "nodemon backend/server.js"
+    "serve": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend"
   }
 }
