--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "mongoose": "^6.4.4"
   },
   "devDependencies": {
+    "concurrently": "^7.3.0",
     "nodemon": "^2.0.19"
   },
   "scripts": {
     "start": "node backend/server.js",
     "serve": "nodemon backend/server.js",
-    "client": "npm start --prefix frontend"
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run serve\" \"npm run client\""
   }
 }
